Fix main container padding on narrow view port

--- a/src/css/pages/home.css
+++ b/src/css/pages/home.css
@@ -1,7 +1,6 @@
 .home-page {
   & .main-container {
     background: linear-gradient(transparent, rgb(0 0 0 / 18%));
-    padding: 0 var(--spacing-home-content);
   }
 }
 
